AV-1944: Fix banner content alignment on non-admin users

--- a/opendata-assets/src/less/components/dataset.less
+++ b/opendata-assets/src/less/components/dataset.less
@@ -67,7 +67,6 @@
 
 .admin-banner {
   display: flex;
-  justify-content: flex-end;
   margin-bottom: 20px;
 
   a {
